[project]
name = "yaoyorozu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yoshida0t", email = "yoshida.takumi.52x@st.kyoto-u.ac.jp" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "natsort>=8.4.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyvista>=0.47.1",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.5",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
